Client: Introduce conditional rendering for PostInput and pagination in DiscussionSpacePage to ensure visibility only after initial post load; Header CSS cleanup

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -61,9 +61,9 @@
     border-radius: 7px;
 }
 
-.nav-menu a:hover {
+.nav-menu a:hover, .user-menu a:hover {
     color: #003681;
-    background-color: rgba(159, 159, 159, 0.20);
+    background-color: rgba(241, 241, 241, 0.25);
     box-shadow: none;
 }
 
@@ -148,11 +148,6 @@
     font-size: 18px;
 }
 
-.user-menu a:hover {
-    color: #007bff;
-    background-color: rgba(215, 223, 250, 0.25);
-}
-
 .nav-menu.displayed, .user-menu.displayed {
     display: flex;
 }
@@ -201,7 +196,7 @@
 
 .logout-button:active {
     background-color: rgba(155, 0, 0, 0.78);
-    transform: scale(0.98);
+    transform: none;
 }
 
 
